--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                     const blob = new Blob([file], { type: file.type });
                     console.log('Neue Datei', blob);
 
-                    const base64 = await blobToBase64(blob);
+                    const compressedBase64 = await compressImage(file, 800, 800, 0.7);
                     const img = document.createElement('img');
-                    img.src = base64;
+                    img.src = compressedBase64;
                     gallery.appendChild(img);
                     allImages.push({
                         filename: file.name,
                         fileType: blob.type,
-                        base64: base64
+                        base64: compressedBase64
                     });
                     save();
                 });
@@ -104,6 +104,59 @@
                 reader.readAsDataURL(blob);
             });
         }
+
+        /**
+         * Komprimiert ein Bild auf eine Zielgröße oder -qualität
+         * @param {File} file - Die Bilddatei, die komprimiert werden soll
+         * @param {number} maxWidth - Die maximale Breite des Bildes
+         * @param {number} maxHeight - Die maximale Höhe des Bildes
+         * @param {number} quality - Qualität des komprimierten Bildes (zwischen 0 und 1)
+         * @returns {Promise<string>} - Base64-String des komprimierten Bildes
+         */
+         function compressImage(file, maxWidth = 800, maxHeight = 800, quality = 0.8) {
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+
+                reader.onload = (event) => {
+                    const img = new Image();
+                    img.onload = () => {
+                        const canvas = document.createElement('canvas');
+                        const ctx = canvas.getContext('2d');
+
+                        // Berechnung der neuen Größe, um die Proportionen beizubehalten
+                        let width = img.width;
+                        let height = img.height;
+
+                        if (width > maxWidth || height > maxHeight) {
+                            if (width > height) {
+                                height = (height * maxWidth) / width;
+                                width = maxWidth;
+                            } else {
+                                width = (width * maxHeight) / height;
+                                height = maxHeight;
+                            }
+                        }
+
+                        canvas.width = width;
+                        canvas.height = height;
+
+                        // Zeichne das Bild in das Canvas
+                        ctx.drawImage(img, 0, 0, width, height);
+
+                        // Exportiere das Bild als Base64
+                        const compressedBase64 = canvas.toDataURL('image/jpeg', quality);
+                        resolve(compressedBase64);
+                    };
+
+                    img.onerror = () => reject('Fehler beim Laden des Bildes.');
+                    img.src = event.target.result;
+                };
+
+                reader.onerror = () => reject('Fehler beim Lesen der Datei.');
+                reader.readAsDataURL(file);
+            });
+        }
+
     </script>
 </body>
 
