--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.css" integrity="sha512-9NawOLzuLE2GD22PJ6IPWXEjPalb/FpdH1qMpgXdaDM+0OfxEV75ZCle6KhZi0vM6ZWvMrNnIZv6YnsL+keVmA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         .upload {
             cursor: pointer;
@@ -20,8 +21,14 @@
         #gallery img {
             height: 100px;
             width: 100px;
+            cursor: pointer;
             object-fit: cover;
             background-color: rgba(0, 0, 0, 0.1);
+        }
+
+        #gallery img:hover {
+            filter: brightness(1.2);
+            box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
         }
 
         .error {
@@ -42,122 +49,10 @@
 
     </div>
 
-    
 
-    <script>
-        const filepicker = document.getElementById('filepicker');
-        const gallery = document.getElementById('gallery');
-        const error = document.getElementById('error');
-        let allImages = [];
 
-        filepicker.addEventListener('change', async () => {
-            const files = filepicker.files;
-            if (files.length > 0) {
-                Array.from(files).forEach(async file => {
-                    if (!file.type.startsWith('image/')) {
-                        error.textContent = `Die Datei "${file.name}" ist kein gültiges Bild.`;
-                        return;
-                    }
-                    const blob = new Blob([file], { type: file.type });
-                    console.log('Neue Datei', blob);
-
-                    const compressedBase64 = await compressImage(file, 800, 800, 0.7);
-                    const img = document.createElement('img');
-                    img.src = compressedBase64;
-                    gallery.appendChild(img);
-                    allImages.push({
-                        filename: file.name,
-                        fileType: blob.type,
-                        base64: compressedBase64
-                    });
-                    save();
-                });
-            }
-        });
-
-        function save() {
-            let arrayAsString = JSON.stringify(allImages);
-            localStorage.setItem('allImages', arrayAsString);
-        }
-
-        function load() {
-            let arrayAsString = localStorage.getItem('allImages');
-            if (arrayAsString) {
-                allImages = JSON.parse(arrayAsString);
-                render();
-            }
-        }
-
-        function render() {
-            gallery.innerHTML = '';
-            allImages.forEach(image => {
-                gallery.innerHTML += `
-                    <img src="${image.base64}">
-                    `;
-            });
-        }
-
-        function blobToBase64(blob) {
-            return new Promise((resolve, _) => {
-                const reader = new FileReader();
-                reader.onloadend = () => resolve(reader.result);
-                reader.readAsDataURL(blob);
-            });
-        }
-
-        /**
-         * Komprimiert ein Bild auf eine Zielgröße oder -qualität
-         * @param {File} file - Die Bilddatei, die komprimiert werden soll
-         * @param {number} maxWidth - Die maximale Breite des Bildes
-         * @param {number} maxHeight - Die maximale Höhe des Bildes
-         * @param {number} quality - Qualität des komprimierten Bildes (zwischen 0 und 1)
-         * @returns {Promise<string>} - Base64-String des komprimierten Bildes
-         */
-         function compressImage(file, maxWidth = 800, maxHeight = 800, quality = 0.8) {
-            return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-
-                reader.onload = (event) => {
-                    const img = new Image();
-                    img.onload = () => {
-                        const canvas = document.createElement('canvas');
-                        const ctx = canvas.getContext('2d');
-
-                        // Berechnung der neuen Größe, um die Proportionen beizubehalten
-                        let width = img.width;
-                        let height = img.height;
-
-                        if (width > maxWidth || height > maxHeight) {
-                            if (width > height) {
-                                height = (height * maxWidth) / width;
-                                width = maxWidth;
-                            } else {
-                                width = (width * maxHeight) / height;
-                                height = maxHeight;
-                            }
-                        }
-
-                        canvas.width = width;
-                        canvas.height = height;
-
-                        // Zeichne das Bild in das Canvas
-                        ctx.drawImage(img, 0, 0, width, height);
-
-                        // Exportiere das Bild als Base64
-                        const compressedBase64 = canvas.toDataURL('image/jpeg', quality);
-                        resolve(compressedBase64);
-                    };
-
-                    img.onerror = () => reject('Fehler beim Laden des Bildes.');
-                    img.src = event.target.result;
-                };
-
-                reader.onerror = () => reject('Fehler beim Lesen der Datei.');
-                reader.readAsDataURL(file);
-            });
-        }
-
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.min.js" integrity="sha512-lZD0JiwhtP4UkFD1mc96NiTZ14L7MjyX5Khk8PMxJszXMLvu7kjq1sp4bb0tcL6MY+/4sIuiUxubOqoueHrW4w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
